# Flewnit

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  README.txt  buildScript.sh  flewnitLog.txt  libflewnitSettingsExports.xml
app/: DemoInputInterpreter.cpp  DemoInputInterpreter.h  main.cpp
assets/blendfiles/raptor/: raptor_11k_FacesNormalDisp_NoPackedTextures.blend
config/: FlewnitConfig.xml  FlewnitConfig128k.xml  FlewnitConfig256k.xml  FlewnitConfig32k.xml  FlewnitConfig65k.xml  FlewnitSimulationPipelineConfig.xml  assimpHack.txt
doc/Algorithm/: Algo_TriangleIndexListVoxelisation.odt  Algorithm LightSim init.txt  Algorithm_ParallelRadixSort.txt  AlgorithmenBrainstorming_ParticleL1L2CacheExcessPatterns.txt  Algorithmus Erstellung von TriangleIndexlisten.txt  Brainstorming UniformGridStructure HandleReordering.txt  combining global coalescing and alignment with local omission of bank conflicts for vector types.txt  conceptual notes before SPH fLuid implementation.txt  hardwareDependentConsiderations.txt  physics computation in uniform grid voxel chunks.txt  status3mueller.txt
doc/Architecture/: Buffer_Flewnit_Architecture.dia  CLProgramAndCo.dia  Detail_Simulator.dia  Overview_Flewnit_Architecture.dia  Overview_Flewnit_Architecture_After_Implementation1.dia  Overview_Flewnit_Architecture_After_Implementation2.dia  ShaderGeneration.dia  Simulator_Flewnit_Architecture.dia  WorldObject_FlewnIt_Architecture.dia  WorldObject_Reloaded_FlewnIt_Architecture.dia  classicalVsUnified.dia  classicalVsUnified2.dia
doc/CV-Tag/: .~lock.Projektposter_Flewnit.ppt#  FastForwardSlide_Flewnit .ppt  Projektposter_Flewnit.ppt
doc/Elaboration/: AppendixBufferListing.tex  AppendixListings.tex  Ausblick.tex  BA Markus Schlueter Abstract - English.odt  BA Markus Schlueter Abstract - German.odt  BASchlueter.bbl  BASchlueter.bib  BASchlueter.tex  Begriffe.tex  BufferAbstraktion.tex  Einleitung.tex  Ergebnisse.tex  Fazit.tex  GLSLSyntaxHighlight.tex  MechanicalDomain.tex  Systemarchitektur.tex  Ueberblick.tex  VisualDomain.tex  cgBA.cls  classicalVsUnified.pdf_tex  subsections.sty
doc/Elaboration/logos/: UniLogoNeu.eps
doc/Kolloquium/: testsource.h
doc/Results/: benchmarks.txt
doc/misc/: Fragen an Mueller KonzeptionsTreffen 09_11_2010.txt  Mitschrit ThemenFestlegung Mueller 10_09_2010.txt  Pflichtenheft.txt  terminStatustreffen10mueller.txt  terminStatustreffen11mueller.txt  terminStatustreffen4mueller.txt  terminStatustreffen5mueller.txt  terminStatustreffen6mueller.txt  terminStatustreffen7mueller.txt  terminStatustreffen8mueller.txt  terminStatustreffen9mueller.txt  termin_NotfallVorAbgabe_mueller.txt
src/: URE.cpp  URE.h  cmakeGeneratedDefinitions.h
src/Buffer/: Buffer.cpp  Buffer.h  BufferHelperUtils.cpp  BufferHelperUtils.h  BufferInterface.cpp  BufferInterface.h  BufferInterfaceSignatures.h  BufferSharedDefinitions.cpp  BufferSharedDefinitions.h  BufferVirtualSignatures.h  FBO.cpp  FBO.h  IntermediateResultBuffersManager.cpp  IntermediateResultBuffersManager.h  PingPongBuffer.cpp  PingPongBuffer.h  RenderBuffer.cpp  RenderBuffer.h  Texture.cpp  Texture.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  TextureNonCLInteropImplementations.h  VBO.cpp  VBO.h
src/Common/: AmendedTransform.cpp  AmendedTransform.h  BasicObject.cpp  BasicObject.h  CL_GL_Common.h  ClassTemplate.cpp  ClassTemplate.h  FlewnitSharedDefinitions.h  Math.cpp  Math.h  MemoryTracker.h  Profiler.cpp  Profiler.h  Singleton.h
src/Geometry/: BufferBasedGeometry.cpp  BufferBasedGeometry.h  Geometry.cpp  Geometry.h  GeometryTransformer.cpp  GeometryTransformer.h  InstancedGeometry.cpp  InstancedGeometry.h  Mesh.cpp  Mesh.h  ParticleGeometry.cpp  ParticleGeometry.h  PointCloud.cpp  PointCloud.h  VertexBasedGeometry.cpp  VertexBasedGeometry.h  VoxelGrid.cpp  VoxelGrid.h  VoxelGridGeometry.cpp  VoxelGridGeometry.h
src/MPP/: MPP.cpp  MPP.h
src/Material/: DebugDrawVisualMaterial.cpp  DebugDrawVisualMaterial.h  FluidMechanicalMaterial.cpp  FluidMechanicalMaterial.h  FluidVisualMaterial.cpp  FluidVisualMaterial.h  LightingMaterial.cpp  LightingMaterial.h  Material.cpp  Material.h  MechanicalMaterial.cpp  MechanicalMaterial.h  ParticleFluidMechMat.cpp  ParticleFluidMechMat.h  ParticleLiquidVisualMaterial.cpp  ParticleLiquidVisualMaterial.h  ParticleRigidBodyMechMat.cpp  ParticleRigidBodyMechMat.h  ParticleizedRigidBodyMechanicalMaterial.cpp  ParticleizedRigidBodyMechanicalMaterial.h  RigidBodyMechanicalMaterial.cpp  RigidBodyMechanicalMaterial.h  SkyDomeMaterial.cpp  SkyDomeMaterial.h  VisualMaterial.cpp  VisualMaterial.h
src/Scene/: AccelerationStructure.cpp  AccelerationStructure.h  ParticleAttributeBuffers.cpp  ParticleAttributeBuffers.h  ParticleSceneRepresentation.cpp  ParticleSceneRepresentation.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  SceneRepresentation.cpp  SceneRepresentation.h  UniformGrid.cpp  UniformGrid.h
src/Simulator/: OpenCL_Manager.cpp  OpenCL_Manager.h  ParallelComputeManager.cpp  ParallelComputeManager.h  ShaderFeatureRelevantEnums.h  SimulationDataBase.cpp  SimulationDataBase.h  SimulationObject.cpp  SimulationObject.h  SimulationPipelineStage.cpp  SimulationPipelineStage.h  SimulationResourceManager.cpp  SimulationResourceManager.h  SimulatorCommon.h  SimulatorForwards.h  SimulatorInterface.cpp  SimulatorInterface.h  SimulatorMetaInfo.cpp  SimulatorMetaInfo.h  SimulatorMetaInfos.cpp  SimulatorMetaInfos.h
src/Util/: GLFWTimer.cpp  GLFWTimer.h  HelperFunctions.cpp  HelperFunctions.h  RadixSorter.cpp  RadixSorter.h  Timer.cpp  Timer.h  ZIndexHelper.cpp  ZIndexHelper.h
src/WorldObject/: Box.cpp  Box.h  Fluid.cpp  Fluid.h  InstanceManager.cpp  InstanceManager.h  ParticleFluid.cpp  ParticleFluid.h  ParticleRigidBody.cpp  ParticleRigidBody.h  ParticleizedRigidBody.cpp  ParticleizedRigidBody.h  PureVisualObject.cpp  PureVisualObject.h  RigidBody.cpp  RigidBody.h  SkyBox.cpp  SkyBox.h  SkyDome.cpp  SkyDome.h  StaticObject.cpp  StaticObject.h  SubObject.cpp  SubObject.h  WorldObject.cpp  WorldObject.h
(+218 files in other folders)
